Update ScoreboardManager.java